--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/javascript.js"></script>
+
 </head>
 <body>
-    <script>
-        let fetchRes=fetch("https://jsonplaceholder.typicode.com/posts");
-        fetchRes.then(Response => Response.json())
-        .then(d=>{
-            console.log(d);
-        });
-    </script>
+    <div class="d-flex justify-content-center">
+        <div class="spinner-border" 
+             role="status" id="loading">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
+    <h1> Show User data </h1>
+    <table id="tab1"></table>
+
 </body>
 </html>
